# ChangeLog for sci-biology/muscle
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/muscle/ChangeLog,v 1.20 2015/04/21 18:54:50 pacho Exp $

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> muscle-3.8.31.ebuild:
  ppc stable wrt bug #544956

  19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> muscle-3.8.31.ebuild:
  Stable for x86, wrt bug #544956

  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> muscle-3.8.31.ebuild:
  Stable for amd64, wrt bug #544956

  29 Mar 2015; Justin Lecher <jlec@gentoo.org> -muscle-3.6.ebuild,
  -muscle-3.7.ebuild, metadata.xml, muscle-3.8.31.ebuild:
  Drop old

  20 Jul 2010; Joseph Jezak <josejx@gentoo.org> muscle-3.7-r1.ebuild:
  Marked ppc stable for bug #277980.

  29 Jun 2010; Christian Faulhammer <fauli@gentoo.org> muscle-3.7-r1.ebuild:
  stable x86, bug 277980

  28 Jun 2010; Christoph Mende <angelos@gentoo.org> muscle-3.7-r1.ebuild:
  Stable on amd64 wrt bug #277980

*muscle-3.7-r1 (28 Jun 2010)

  28 Jun 2010; Justin Lecher <jlec@gentoo.org>
  +files/3.7-bufferoverflow.patch, +muscle-3.7-r1.ebuild:
  Fix for bufferoverflow, #309341

  24 Jun 2010; Christoph Mende <angelos@gentoo.org> muscle-3.7.ebuild:
  Stable on amd64 wrt bug #277980

*muscle-3.8.31 (24 Jun 2010)

  24 Jun 2010; Justin Lecher <jlec@gentoo.org> +files/3.8.31-make.patch,
  muscle-3.6.ebuild, muscle-3.7.ebuild, +muscle-3.8.31.ebuild:
  Version Bump, blocking sci-libs/libmuscle, #308707

*muscle-3.7 (21 Mar 2008)

  21 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +muscle-3.7.ebuild:
  Bump. Bug fixes and undocumented new features.

  31 Dec 2007; Jeff Gardner <je_fro@gentoo.org> ChangeLog:
  fixing my email addy

  26 Dec 2007; Samuli Suominen <drac@gentoo.org> muscle-3.6.ebuild:
  amd64 stable wrt #203185

  25 Dec 2007; nixnut <nixnut@gentoo.org> muscle-3.6.ebuild:
  Stable on ppc wrt bug 203185

  21 Oct 2007; <je_fro@gentoo.org> muscle-3.6.ebuild:
  Adding ~amd64 and ~ppc for seaview
