@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/muscle
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/muscle/ChangeLog,v 1.20 2015/04/21 18:54:50 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/muscle/ChangeLog,v 1.21 2015/04/22 06:48:54 jlec Exp $
+
+  22 Apr 2015; Justin Lecher <jlec@gentoo.org> -muscle-3.7-r1.ebuild:
+  Drop old
 
   21 Apr 2015; Pacho Ramos <pacho@gentoo.org> muscle-3.8.31.ebuild:
   ppc stable wrt bug #544956
